# und_ml

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
gtest/: CMakeLists.txt
include/: ann.hpp  file_reader.hpp  kernel.hpp  log_sigmoid.hpp  matrix_ops.hpp  matrix_reader.hpp  tan_sigmoid.hpp
libs/: CMakeLists.txt
libs/gtest/: CMakeLists.txt
libs/slog/: CMakeLists.txt
src/: CMakeLists.txt  ann.cpp  file_reader.cpp  log_sigmoid.cpp  matrix_ops.cpp  matrix_ops.cxx  tan_sigmoid.cpp
test/: CMakeLists.txt  ann_test.cpp  file_reader_test.cpp  integration_test.cpp  log_sigmoid_test.cpp  matrix_ops_test.cpp  tan_sigmoid_test.cpp
